--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -765,7 +765,7 @@ td {
 #chaatcravings {
   padding-top: 75px;
   padding-bottom: 100px;
-  background: url("images/chaatcravings.png");/* blog/blog-bg.jpg */
+  /*background: url("images/chaatcravings.png");/* blog/blog-bg.jpg */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -793,4 +793,56 @@ td {
    text-align: left;
     background-color: white;
     padding: 10px;
+}
+
+#menu {
+  padding: 70px 0px;
+}
+#menu .block > p {
+  color: #9D9D9D;
+  font-size: 16px;
+  line-height: 26px;
+  padding: 40px 133px 0;
+  text-align: center;
+}
+#menu .block .pricing-list {
+  padding-top: 85px;
+  background-color: white;
+  padding:50px;
+  min-height: 1170px;
+}
+#menu .block .pricing-list ul {
+  padding: 0 0 30px;
+  margin: 0;
+}
+#menu .block .pricing-list ul li {
+  padding: 21px 0px;
+}
+#menu .block .pricing-list ul li .item .item-title {
+  position: relative;
+}
+#menu .block .pricing-list ul li .item .item-title h2 {
+  display: inline-block;
+  position: relative;
+  z-index: 99;
+  background: #fff;
+}
+#menu .block .pricing-list ul li .item .item-title .border-bottom {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 1px;
+  border: 1px dotted #C9C9C9;
+  margin-top: 50px;
+}
+#menu .block .pricing-list ul li .item .item-title span {
+  float: right;
+  color: #938463;
+}
+#menu .block .pricing-list ul li .item p {
+  padding: 12px 0 0px;
+  color: #949494;
+}
+.logo-img {
+  padding-left: 25%;
 }
