--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -277,6 +277,7 @@ px      68    160    252    */
   }
   #price .block .pricing-list {
     text-align: left;
+    min-height: 1800px;
   }
   #price .block .pricing-list ul li .item {
     float: none;
@@ -287,7 +288,7 @@ px      68    160    252    */
   #price .block .pricing-list ul li .item .item-title span {
     padding-top: 10px;
     display: block;
-    float: none;
+    /*float: none;*/
   }
   #price .block .pricing-list .btn {
     float: inherit;
